fix z-index bug on sticky nav bar

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -254,7 +254,7 @@ html {
   border-top: 0;
   border-bottom: 0;
   background: #fff;
-  z-index: 1000;
+  z-index: 1001;
   box-shadow: 0 0 2px #888;
 }
 
